Added red for er part of manger

--- a/french-ending-finder.html
+++ b/french-ending-finder.html
@@ -11,7 +11,9 @@
 		<tr>
 					<th colspan="3">
 						<font size="5">
-							<font face="verdana">&ensp; Manger/to eat&ensp;</font>
+							<font face="verdana">
+								&ensp; Mang<font color="red">er</font>/to eat&ensp;
+							</font>
 						</font size="5">
 					</th>
 
