Improved style-sheet.css

--- a/french-ending-finder.html
+++ b/french-ending-finder.html
@@ -9,52 +9,33 @@
 
 	<table border ="1">
 		<tr>
-					<th colspan="3">
-						<font size="5">
-							<font face="verdana">
-								&ensp; Mang<font color="red">er</font>/to eat&ensp;
-							</font>
-						</font size="5">
-					</th>
-
+			<th colspan="2">Mang<span class="ending">er</span>/to eat</th>
 		</tr>
 		
 		<tr>
-			<th>&nbsp; Je &nbsp;</th>
-			<th>
-				mang<font color="red">e</font>
-			</th>
+			<td>Je</td>
+			<td>mang<span class="ending">e</span></td>
+		</tr>
+		<tr>
+			<td>Tu</td>
+			<td>mang<span class="ending">es</span></td>
+		</tr>
+		<tr>
+			<td>Il/Elle/On</td>
+			<td>mang<span class="ending">e</span></td>
 		</tr>
 		
 		<tr>
-			<th>&nbsp; Tu &nbsp;</th>
-			<th>
-				mang<font color="red">es</font>
-			</th>
+			<td>Nous</td>
+			<td>mang<span class="ending">eons</span></td>
 		</tr>
 		<tr>
-			<th>&nbsp; Il/Elle/On &nbsp;</th>
-			<th>
-				mang<font color="red">e</font>
-			</th>
+			<td>Vous</td>
+			<td>mang<span class="ending">ez</span></td>
 		</tr>
 		<tr>
-			<th>&nbsp; Nous &nbsp;</th>
-			<th>
-				mang<font color="red">eons</font>
-			</th>
-		</tr>
-		<tr>
-			<th>&nbsp; Vous &nbsp;</th>
-			<th>
-				mang<font color="red">ez</font>
-			</th>
-		</tr>
-		<tr>
-			<th>&nbsp; Ils/Elles &nbsp;</th>
-			<th>
-				mang<font color="red">ent</font>
-			</th>
+			<td>Ils/Elles</td>
+			<td>mang<span class="ending">ent</span></td>
 		</tr>
 	</table>
 </body>
