Add some JQuery (experimental).

--- a/french-ending-finder.html
+++ b/french-ending-finder.html
@@ -2,8 +2,13 @@
  
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>French Ending Finder</title>
 	<link rel="stylesheet" href="style-sheet.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
+	<script src="verbs.js" ></script>
 </head>
 <body>
 
@@ -38,5 +43,6 @@
 			<td>mang<span class="ending">ent</span></td>
 		</tr>
 	</table>
+	<div id="next">Next</div>
 </body>
 </html>
