Add a few verbs and the JQuery to substitute the French stems.

--- a/french-ending-finder.html
+++ b/french-ending-finder.html
@@ -14,33 +14,33 @@
 
 	<table border ="1">
 		<tr>
-			<th colspan="2">Mang<span class="ending">er</span>/to eat</th>
+			<th colspan="2"><span class="stem">mang</span><span class="ending">er</span>/ to eat</th>
 		</tr>
 		
 		<tr>
 			<td>Je</td>
-			<td>mang<span class="ending">e</span></td>
+			<td><span class="stem">mang</span><span class="ending">e</span></td>
 		</tr>
 		<tr>
 			<td>Tu</td>
-			<td>mang<span class="ending">es</span></td>
+			<td><span class="stem">mang</span><span class="ending">es</span></td>
 		</tr>
 		<tr>
 			<td>Il/Elle/On</td>
-			<td>mang<span class="ending">e</span></td>
+			<td><span class="stem">mang</span><span class="ending">e</span></td>
 		</tr>
 		
 		<tr>
 			<td>Nous</td>
-			<td>mang<span class="ending">eons</span></td>
+			<td><span class="stem">mang</span><span class="ending">ons</span></td>
 		</tr>
 		<tr>
 			<td>Vous</td>
-			<td>mang<span class="ending">ez</span></td>
+			<td><span class="stem">mang</span><span class="ending">ez</span></td>
 		</tr>
 		<tr>
 			<td>Ils/Elles</td>
-			<td>mang<span class="ending">ent</span></td>
+			<td><span class="stem">mang</span><span class="ending">ent</span></td>
 		</tr>
 	</table>
 	<div id="next">Next</div>
