English infinitive fixed to show actual translation.

--- a/french-ending-finder.html
+++ b/french-ending-finder.html
@@ -14,7 +14,7 @@
 
 	<table border ="1">
 		<tr>
-			<th colspan="2"><span class="stem"></span><span class="ending">er</span>/ to eat</th>
+			<th colspan="2"><span class="stem"></span><span class="ending">er</span>/<span class="english"></span></th>
 		</tr>
 		
 		<tr>
